cmake_minimum_required(VERSION 3.16)
project(MigaczJan-etap3)

set(CMAKE_CXX_STANDARD 14)

add_executable(MigaczJan-etap3 main.cpp Automat.cpp Automat.h Drink.cpp Drink.h Money.cpp Money.h pay.cpp pay.h BLIK.cpp BLIK.h Card.cpp Card.h Cash.cpp Cash.h User_Interaction.cpp User_Interaction.h Exceptions.cpp Exceptions.h Container.h)